Bulk operation freezes if used in combination with collation and upsert

XMLWordPrintableJSON

    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0, v7.0, v6.0, v5.0
    • Hide

      Run the following steps in the mongosh:

      use test-db
      
      db.createCollection('users')
      
      db.users.createIndex({ 'username': 1 }, { unique: 1 })
      
      db.users.insert({ "username": "LDAP"  })
      
      db.users.insert({ "username": "ldap" })
      
      var bulk = db.users.initializeUnorderedBulkOp()
      
      bulk.find({"username":"ldap"}).collation({"locale":"en","strength":2}).upsert().updateOne({"$set":{ "username":"ldap"}})
      
      bulk.execute() 
      Show
      Run the following steps in the mongosh: use test-db db.createCollection( 'users' ) db.users.createIndex({ 'username' : 1 }, { unique: 1 }) db.users.insert({ "username" : "LDAP" }) db.users.insert({ "username" : "ldap" }) var bulk = db.users.initializeUnorderedBulkOp() bulk.find({ "username" : "ldap" }).collation({ "locale" : "en" , "strength" :2}).upsert().updateOne({ "$set" :{ "username" : "ldap" }}) bulk.execute()
    • QE 2024-09-02, QE 2024-09-16
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

          Assignee:
          Ivan Fefer (Inactive)
          Reporter:
          Denis Frenademetz
          Votes:
          0 Vote for this issue
          Watchers:
          9 Start watching this issue

            Created:
            Updated:
            Resolved: