SERVER-84089 Check for collation when retrying bulk write upsert (#26578)

GitOrigin-RevId: 3565983c24c271e20cf4dd2b3d3cce2adde9379b