src/mongo/db/storage/duplicate_key_error_info.h
@@ -86,6 +86,10 @@ public:
         return _duplicateRid;
     }
 
+    const BSONObj& getCollation() const {
+        return _collation;
+    }
+
 private:
     BSONObj _keyPattern;
     BSONObj _keyValue;
